--- a/15. Practice for buttons and input fields.ipynb
+++ b/15. Practice for buttons and input fields.ipynb
@@ -179,24 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "em?????\nThe player's choise is Spock.\nThe computer's choise is lizard.\nComputer wins!\n"
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#6\n",
     "\n",
@@ -217,8 +202,8 @@
     "        return 3\n",
     "    elif name == \"scissors\":\n",
     "        return 4\n",
-    "    else:\n",
-    "        return \"NOOOOOO\"\n",
+    "    # else:\n",
+    "        # return \"NOOOOOO\"\n",
     "\n",
     "\n",
     "def number_to_name(number):\n",
@@ -253,7 +238,7 @@
     "        # else:\n",
     "            # return\n",
     "    else:\n",
-    "        print('em?????')\n",
+    "        print('Em?????')\n",
     "        # return\n",
     "\n",
     "\n",
