format old code & timer

--- a/21. Practice for Drawing.ipynb
+++ b/21. Practice for Drawing.ipynb
@@ -94,7 +94,8 @@
     "\n",
     "# Start the frame animatio\n",
     "frame.start()\n",
-    "\n"
+    "\n",
+    ""
    ]
   },
   {
@@ -176,7 +177,8 @@
     "#0 minutes and 23 seconds\n",
     "#20 minutes and 37 seconds\n",
     "#0 minutes and 0 seconds\n",
-    "#31 minutes and 0 seconds\n"
+    "#31 minutes and 0 seconds\n",
+    ""
    ]
   },
   {
@@ -215,23 +217,15 @@
    "metadata": {},
    "source": [
     "## (Constants are capitalized in Python)"
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Move a ball\n",
     "\n",
@@ -249,7 +243,7 @@
     "\n",
     "# Draw handler\n",
     "def draw(canvas):\n",
-    "    canvas.draw_circle([350, 350], ball_radius, 2, 'yellow', 'white')\n",
+    "    canvas.draw_circle([350, 350], ball_radius, 5, 'red', 'black')\n",
     "\n",
     "    \n",
     "# Event handlers for buttons\n",
@@ -274,7 +268,8 @@
     "\n",
     "# Start the frame animation\n",
     "frame.start()\n",
-    "\n"
+    "\n",
+    ""
    ]
   }
  ]
